# auth/swagger_output.json
@@ -15,6 +15,10 @@
     {
       "name": "Auth",
       "description": "Endpoints Auth"
+    },
+    {
+      "name": "Service",
+      "description": "Endpoints Services"
     }
   ],
   "schemes": [
@@ -324,6 +328,43 @@
       },
       "required": [
         "newPhoneNumber"
+      ]
+    },
+    "DataService": {
+      "type": "object",
+      "properties": {
+        "nameService": {
+          "type": "string",
+          "example": "Pintura de ambientes"
+        },
+        "descService": {
+          "type": "string",
+          "example": "Realização da pintura de ambientes internos e externos"
+        },
+        "priceMinService": {
+          "type": "string",
+          "example": "R$ 200,00"
+        },
+        "productService": {
+          "type": "string",
+          "example": "Tinta e pincel"
+        },
+        "avgTimeService": {
+          "type": "string",
+          "example": "50 minutos"
+        },
+        "categoryService": {
+          "type": "string",
+          "example": "Pintura"
+        }
+      },
+      "required": [
+        "nameService",
+        "descService",
+        "priceMinService",
+        "productService",
+        "avgTimeService",
+        "categoryService"
       ]
     }
   }
